@@ -23,4 +23,18 @@ class UpgradeCommandletTest extends AbstractIdeContextTest {
     // assert
     assertThat(context).logAtWarning().hasMessage("You are using IDEasy version SNAPSHOT which indicates local development - skipping upgrade.");
   }
+
+  @Test
+  public void testUpgradeWhenOffline() {
+    // arrange
+    IdeTestContext context = new IdeTestContext();
+    context.setOnline(false);
+    UpgradeCommandlet upgrade = context.getCommandletManager().getCommandlet(UpgradeCommandlet.class);
+
+    // act
+    upgrade.run();
+
+    // assert
+    assertThat(context).logAtWarning().hasMessage("You are offline. IDEasy requires an internet connection to upgrade - skipping upgrade.");
+  }
 }
